src/test/deca/context/valid/var_env.deca
{
int x=5;
int b,c;
while(x>10) {
   b=x;
   c=b*5;
}
}