src/test/deca/context/invalid/op_arith_string.deca
//ERROR :5:
{
String s="iniesta";
int messi=10;
float xavi = s*messi;

}